--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -1,7 +1,20 @@
-<GridLayout rows="auto, *" class="page">
+<GridLayout rows="auto, auto,*" class="page">
 
+    <GridLayout class="busqueda-bar" row="0">
+        <GridLayout columns="40,*,40">
+            <Image *ngIf="!aparecer" col="0" src="~/assets/images/logo.png"></Image>
+            <Label *ngIf="aparecer" col="0" text="&#xe904;" class="ico" (tap)="aparecerBuscar(+1)"></Label>
+            <Label *ngIf="!aparecer" col="2" [text]="icoSearch" class="ico" (tap)="aparecerBuscar(+1)"></Label>
+            <Label *ngIf="!aparecer" col="1" text="Productos" class="titulo-bar"></Label>
+            <SearchBar class="searchbar" *ngIf="aparecer" col="1" id="searchBar" hint="Buscar producto..." (textChange)="buscarProducto($event)" textFieldHintColor="gray"></SearchBar>
+        </GridLayout>
+    </GridLayout>
 
-    <RadListView row="1" class="card" [items]="productos | filtro:textoBuscar" pullToRefresh="true" (pullToRefreshInitiated)="onPullToRefreshInitiated($event)">
+    <GridLayout row="1" class="card card-layout">
+        <carrito></carrito>
+    </GridLayout>
+
+    <RadListView row="2" class="card" [items]="productos | filtro:textoBuscar" pullToRefresh="true" (pullToRefreshInitiated)="onPullToRefreshInitiated($event)">
 
         <ng-template let-producto="item">
             <StackLayout [nsRouterLink]="['/producto', producto._id]">
@@ -18,15 +31,8 @@
 
     </RadListView>
 
-    <GridLayout class="busqueda-bar" row="0">
-        <GridLayout columns="40,*,40">
-            <Image *ngIf="!aparecer" col="0" src="~/assets/images/logo.png"></Image>
-            <Label *ngIf="aparecer" col="0" text="&#xe904;" class="ico" (tap)="aparecerBuscar(+1)"></Label>
-            <Label *ngIf="!aparecer" col="2" [text]="icoSearch" class="ico" (tap)="aparecerBuscar(+1)"></Label>
-            <Label *ngIf="!aparecer" col="1" text="Productos" class="titulo-bar"></Label>
-            <SearchBar class="searchbar" *ngIf="aparecer" col="1" id="searchBar" hint="Buscar producto..." (textChange)="buscarProducto($event)" textFieldHintColor="gray"></SearchBar>
-        </GridLayout>
-    </GridLayout>
+
+
 
     <ActivityIndicator class="activity-indicator" [busy]="isLoading" [visibility]="isLoading ? 'visible' : 'collapse'" row="1" horizontalAlignment="center" verticalAlignment="center"></ActivityIndicator>
 
