Servicio de utilidades y funcionalidad componente carrito

--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,11 @@
 @import '~nativescript-theme-core/css/core.light.css';
+
+/*
+    font icons - IconMoon
+*/
+
 .ico {
     font-family: 'IcoMoon-Free';
-    font-size: 20;
 }
 
 .btn-primary {
