--- a/src/app/pages/carrito/carrito.component.html
+++ b/src/app/pages/carrito/carrito.component.html
@@ -1,6 +1,6 @@
-<StackLayout orientation="horizontal">
+<StackLayout orientation="horizontal" class="ico list-group ">
     <Label text="&#xe93a;"></Label>
     <Label text="x2" class="text-primary"></Label>
     <Button text="Ver detalle &#xe922;" class="btn-outline btn-rounded-sm btn-size btn-active"></Button>
-    <Label text="$22.50" class="h3 text-danger text-right"></Label>
+    <Label text="&#xe90f;22.50" class="h3  text-right text-danger"> </Label>
 </StackLayout>
