--- a/src/app/pages/cotizaciones/cotizaciones.component.html
+++ b/src/app/pages/cotizaciones/cotizaciones.component.html
@@ -1,28 +1,22 @@
-<GridLayout tkExampleTitle tkToggleNavButton>
-    <RadListView [items]="getLista" pullToRefresh="true" (pullToRefreshInitiated)="onPullToRefreshInitiated($event)">
-        <ng-template tkListItemTemplate let-estudio="item">
+<GridLayout>
+    <RadListView [items]="cotizaciones" pullToRefresh="true" (pullToRefreshInitiated)="onPullToRefreshInitiated($event)">
+        <ng-template tkListItemTemplate let-cotizacion="item">
 
             <StackLayout class="margenSeparacion" orientation="horizontal">
-                <Image class="imageList img-circle" [src]="estudio.image"></Image>
+                <Label class="imageList img-circle ico" [text]="cotizacion.img"></Label>
                 <StackLayout orientation="vertical">
                     <StackLayout class="list-group-item-heading" orientation="horizontal">
-                        <Label text="Id:" textWrap="true"></Label>
-                        <Label [text]="estudio.id"></Label>
-                        <Label text="Personaje:" textWrap="true"></Label>
-                        <Label [text]="estudio.name"></Label>
+                        <Label text="Numero de Productos:" textWrap="true"></Label>
+                        <Label [text]="cotizacion.productos"></Label>
+                    </StackLayout>
+                    <StackLayout class="list-group-item-text" orientation="horizontal">
+                        <Label text="Fecha:" textWrap="true"></Label>
+                        <Label [text]="cotizacion.fecha"></Label>
                     </StackLayout>
                     <StackLayout class="list-group-item-text" orientation="vertical">
                         <StackLayout class="list-group-item-text" orientation="horizontal">
-                            <Label text="Género:" textWrap="true"></Label>
-                            <Label [text]="estudio.gender"></Label>
-                        </StackLayout>
-                        <StackLayout class="list-group-item-text" orientation="horizontal">
-                            <Label text="Especie:" textWrap="true"></Label>
-                            <Label [text]="estudio.species"></Label>
-                        </StackLayout>
-                        <StackLayout class="list-group-item-text" orientation="horizontal">
-                            <Label text="Estado:" textWrap="true"></Label>
-                            <Label [text]="estudio.status"></Label>
+                            <Label text="Total:" textWrap="true"></Label>
+                            <Label [text]="cotizacion.total" class="h2 text-danger"></Label>
                         </StackLayout>
                     </StackLayout>
                 </StackLayout>
