--- a/src/app/pages/productos/productos.component.css
+++ b/src/app/pages/productos/productos.component.css
@@ -59,3 +59,21 @@
         font-family: 'IcoMoon-Free';
         font-size: 28;
     }
+    
+    RadListView {
+        margin-right: -2;
+    }
+    
+    .listItemTemplateGrid {
+        background-color: white;
+        margin-bottom: 2;
+        margin-right: 2;
+    }
+    
+    .labelsStackLayout {
+        background-color: rgb(255, 255, 255, 0.7);
+        padding-top: 8;
+        padding-bottom: 8;
+        padding-left: 16;
+        padding-right: 16;
+    }
