--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -1,45 +1,38 @@
-<!-- <GridLayout row="auto , auto">
-    <ScrollView class="page">
+<GridLayout rows="auto , auto, auto, auto" class="form">
 
-        <StackLayout class="form">
+    <StackLayout row="0">
+        <Image class="img-profile" [src]="usuario.img | imagen"></Image>
+    </StackLayout>
 
-            <Image class="logo borde" [src]="usuario.img | imagen"></Image>
-            <GridLayout (longPress)="onLongPress($event)">
-                <Label class="input input-field input-rounded" text="NOMBRE: {{usuario.nombre}} " textWrap="true" (longPress)="onLongPress($event)"></Label>
-            </GridLayout>
-            <Label class="input input-field input-rounded" text="CORREO: {{usuario.email}} " textWrap="true"></Label>
-            <Label class="input input-field input-rounded" text="TELEFONO: {{usuario.telefono}} " textWrap="true"></Label>
-            <Button text="Logout" class="btn btn-primary" (tap)="salir()"></Button>
-
+    <GridLayout class="margen" row="1" rows="auto" columns="40, *, auto">
+        <Label class="ico text-primary" text="&#xe971;" row="0" col="0"></Label>
+        <StackLayout row="0" col="1">
+            <Label class="h5" text="Nombre" textWrap="true"></Label>
+            <Label class="" [text]="usuario.nombre" textWrap="true"></Label>
+            <StackLayout class="hr-light margen-linea"></StackLayout>
         </StackLayout>
-
-    </ScrollView>
-</GridLayout> -->
-
-<GridLayout rows="auto auto *" columns="*" sdkExampleTitle sdkToggleNavButton>
-    <GridLayout row="0" col="0" rows="* *" backgroundColor="#adadad">
-        <StackLayout row="0" backgroundColor="#30bcff">
-        </StackLayout>
-        <StackLayout row="0" rowSpan="2" class="p-t-15">
-            <StackLayout class="m-20 p-l-15 p-r-15">
-                <Image [src]="usuario.img | imagen" height="80" width="80" class="img-circle" borderWidth="1" borderColor="white"></Image>
-                <Label [text]="usuario.nombre" class="h2 text-center" textWrap="true"></Label>
-                <Label [text]="usuario.email" class="h4 text-center" textWrap="true"></Label>
-                <Label [text]="usuario.telefono" class="h4 text-center" textWrap="true"></Label>
-                <Label text="Cerrar Sesión &#xea14;" class="h5 text-center text-danger ico" (tap)="salir()"></Label>
-            </StackLayout>
-        </StackLayout>
+        <Label class="ico text-muted" text="&#xe910;" (tap)="modificar('Nombre', usuario)" row="0" col="2"></Label>
     </GridLayout>
-    <GridLayout row="1" col="1" rows="* *" backgroundColor="#adadad">
-        <StackLayout row="0" backgroundColor="#30bcff">
+
+    <GridLayout class="margen" row="2" rows="auto" columns="40, *, auto">
+        <Label class="ico text-primary" text="&#xe908;" row="0" col="0"></Label>
+        <StackLayout row="0" col="1">
+            <Label class="h5" text="Correo Electrónico" textWrap="true"></Label>
+            <Label class="" [text]="usuario.email" textWrap="true"></Label>
+            <StackLayout class="hr-light margen-linea"></StackLayout>
         </StackLayout>
-        <StackLayout row="0" rowSpan="2" class="p-t-15">
-            <StackLayout class="m-20 p-l-15 p-r-15">
-                <Image src="res://icon" height="80" width="80" class="img-circle" borderWidth="1" borderColor="white"></Image>
-                <Label text="Digital Ads" class="h2 text-center" textWrap="true"></Label>
-                <Label text="usuario.telefono" class="h4 text-center" textWrap="true"></Label>
-            </StackLayout>
+        <Label class="ico text-muted" text="&#xe910;" (tap)="modificar('Correo Electrónico',usuario)" row="0" col="2"></Label>
+    </GridLayout>
+
+    <GridLayout class="margen" row="3" rows="auto" columns="40, *, auto">
+        <Label class="ico text-primary" text="&#xe942;" row="0" col="0"></Label>
+        <StackLayout row="0" col="1">
+            <Label class="h5" text="Telefono" textWrap="true"></Label>
+            <Label class="" [text]="usuario.telefono" textWrap="true"></Label>
+            <StackLayout class="hr-light margen-linea"></StackLayout>
         </StackLayout>
+        <Label class="ico text-muted" text="&#xe910;" (tap)="modificar('Telefono', usuario)" row="0" col="2"></Label>
     </GridLayout>
 
 </GridLayout>
+<!-- <Button text="Logout" class="btn btn-primary" (tap)="salir()"></Button> -->
