--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -17,12 +17,12 @@
     <RadListView row="2" class="card" [items]="productos | filtro:textoBuscar" pullToRefresh="true" (pullToRefreshInitiated)="onPullToRefreshInitiated($event)">
 
         <ng-template let-producto="item">
-            <StackLayout [nsRouterLink]="['/producto', producto._id]">
+            <StackLayout [nsRouterLink]="['/producto', producto._id]" pageTransition="slideTop">
                 <StackLayout class="card-layout">
-                    <Label class="h3" [text]="producto.nombre" textWrap="true"></Label>
                     <Image class="img-rounded" stretch="aspectFill" [src]="producto.img | imagen:'producto'"></Image>
-                    <Label class="h4" [text]="producto.categoria.descripcion" textWrap="true"></Label>
-                    <Label class="body" textWrap="true" [text]="producto.descripcion" textWrap="true"></Label>
+                    <Label class="h3" [text]="producto.nombre" textWrap="true"></Label>
+                    <Label class="h6" [text]="producto.categoria.descripcion" textWrap="true"></Label>
+                    <!-- <Label class="body" textWrap="true" [text]="producto.descripcion" textWrap="true"></Label> -->
                     <!-- <Label class="h2 text-right text-danger" textWrap="true" text="${{producto.precioUni}}"></Label> -->
                 </StackLayout>
                 <StackLayout class="separador"></StackLayout>
