--- a/src/app/pages/productos/productos.component.css
+++ b/src/app/pages/productos/productos.component.css
@@ -16,9 +16,13 @@
         margin-bottom: 25;
     }
     
-    .inputCantidad {
-        font-size: 25;
+    .input-cantidad {
+        font-size: 24;
         placeholder-color: #A8A8A8;
+    }
+    
+    .btn-cantidad {
+        width: 40;
     }
     
     .inputVariables {
