Cambio Selectors y borrar component carrito y nuevo component orden

--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -11,13 +11,14 @@
     </GridLayout>
 
     <GridLayout *ngIf="_productosService.activarCarrito" row="1" class="card card-layout">
-        <carrito></carrito>
+        <ns-orden></ns-orden>
     </GridLayout>
 
     <RadListView row="2" class="card" [items]="productos | filtro:textoBuscar" pullToRefresh="true" (pullToRefreshInitiated)="onPullToRefreshInitiated($event)">
 
         <ng-template let-producto="item">
             <StackLayout [nsRouterLink]="['/producto', producto._id]" pageTransition="slideTop">
+
                 <StackLayout class="card-layout">
                     <Image class="img-rounded" stretch="aspectFill" [src]="producto.img | imagen:'producto'"></Image>
                     <Label class="h3" [text]="producto.nombre" textWrap="true"></Label>
@@ -25,7 +26,9 @@
                     <!-- <Label class="body" textWrap="true" [text]="producto.descripcion" textWrap="true"></Label> -->
                     <!-- <Label class="h2 text-right text-danger" textWrap="true" text="${{producto.precioUni}}"></Label> -->
                 </StackLayout>
+
                 <StackLayout class="separador"></StackLayout>
+
             </StackLayout>
         </ng-template>
 
