--- a/src/app/pages/cotizaciones/cotizaciones.component.html
+++ b/src/app/pages/cotizaciones/cotizaciones.component.html
@@ -1,3 +1,4 @@
+<ns-action-bar title="Cotizaciones"></ns-action-bar>
 <GridLayout>
 
     <RadListView [items]="cotizaciones" pullToRefresh="true" (pullToRefreshInitiated)="onPullToRefreshInitiated($event)">
